select and get completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="searchbar">
+  </div>
+      <select id="movies">
+        <option value="None">None</option>
+        <option value="Batman">Batman</option>
+        <option value="Superman">Superman</option>
+        <option value="The Flash">The Flash</option>
+        <option value="Wonder Woman">Wonder Woman</option>
+        <option value="Green Lantern">Green Lantern</option>
+        <option value="Aquaman">Aquaman</option>
+        <option value="Joker">Joker</option>
+        <option value="Watchmen">Watchmen</option>
+        <option value="Catwoman">Catwoman</option>
+        <option value="Black Adam">Black Adam</option>
+      </select>
+  <button id="search_btn">Get</button>
 </body>
 </html>
