css update 2 - added image and header, 10 information of movies done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="header">
+    <p>
+      T M D B
+    </p>
+  </div>
+  <div class="images">
+    <img src="img/csAssignment - header.jpg">
+  </div>
   <div id="searchbar">
     <form action="index.html" method="POST">
           <select id="movies">
